--- a/proyecto_reciclaje/reciclaje/templates/reciclaje/inicio.html
+++ b/proyecto_reciclaje/reciclaje/templates/reciclaje/inicio.html
@@ -13,9 +13,9 @@
     <div class="container">
       <h1>Recicla y Gana</h1>
       <nav>
-        <a href="{% url 'inicio'%}">Inicio</a>
-        <a href="{% url 'login'%}">Iniciar Sesión</a>
-        <a href="{% url 'registro_usuario'%}">Registro</a>
+        <a href="{% url 'inicio'%}" class="btn">Inicio</a>
+        <a href="{% url 'login'%}" class="btn">Iniciar Sesión</a>
+        <a href="{% url 'registro_usuario'%}" class="btn">Registro</a>
       </nav>
     </div>
   </header>
