--- a/proyecto_reciclaje/reciclaje/templates/reciclaje/admin.html
+++ b/proyecto_reciclaje/reciclaje/templates/reciclaje/admin.html
@@ -5,23 +5,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Panel de Administración</title>
-  <link rel="stylesheet" href="{% static 'css/admin.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/administrador.css' %}" />
 </head>
 <body class="dashboard-body">
-  <header class="dashboard-header">
-    <h1>Panel de Administración</h1>
-    <nav class="nav-admin">
+   <header class="dashboard-header">
+    <h1>Bienvenido, Admin</h1>
+    <nav>
       <a href="{% url 'admin_panel' %}">Inicio</a>
-      <a href="{% url 'admin_usuarios' %}">Usuarios</a>
-      <a href="{% url 'admin_registros' %}">Registros</a>
-      <a href="{% url 'admin_catalogo' %}">Catálogo</a>
-      <a href="{% url 'admin_historial' %}">Historial</a>
+      <a href="{% url 'admin_usuarios' %}">Ver Usuarios</a>
+      <a href="{% url 'admin_registros' %}">Ver Registros</a>
+      <a href="{% url 'admin_catalogo' %}">Ver Catálogos</a>
+      <a href="{% url 'admin_catalogo' %}">Ver Donaciones</a>
+      <a href="{% url 'admin_historial' %}">Historial de Acceso</a>
       <select name="lista-bitacora-menu" id="lista-bitacora-menu" onchange="redirigirBitacora(this.value)">
-        <option value="#">Bitácoras</option>
-        <option value="{% url 'bitacora_reciclaje' %}">Reciclaje</option>
-        <option value="{% url 'bitacora_catalogo' %}">Catálogo</option>
-        <option value="{% url 'bitacora_canje' %}">Canje</option>
+        <option value="#">Bitácoras ↓</option>
+        <option value="{% url 'bitacora_reciclaje' %}">Bitácora Reciclaje</option>
+        <option value="{% url 'bitacora_catalogo' %}">Bitácora de Catálogo</option>
+        <option value="{% url 'bitacora_canje' %}">Bitácora de Canje</option>
       </select>
+       <a href="{% url 'dashboard' %}">Volver a Usuario</a>
       <a href="{% url 'logout' %}">Cerrar Sesión</a>
     </nav>
   </header>
