--- a/proyecto_reciclaje/reciclaje/templates/reciclaje/inicio.html
+++ b/proyecto_reciclaje/reciclaje/templates/reciclaje/inicio.html
@@ -18,6 +18,7 @@
         <a href="{% url 'registro_usuario'%}" class="btn">Registro</a>
       </nav>
     </div>
+    <img src="{% static 'img/salvar-el-mundo.png' %}" alt="" class="imagen" />
   </header>
 
   <section class="hero">
