--- a/proyecto_reciclaje/reciclaje/static/css/administrador.css
+++ b/proyecto_reciclaje/reciclaje/static/css/administrador.css
@@ -1,6 +1,6 @@
 .dashboard-body {
     font-family: sans-serif;
-    background-color: #f4fdf4;
+    background-color: #d6f0d6;
     margin: 0;
 }
 
@@ -20,7 +20,6 @@ margin: 0.2em 0;
 .dashboard-header nav ul {
 list-style: none;
 padding: 0;
-display: flex;
 gap: 1em;
 }
 
@@ -30,18 +29,16 @@ text-decoration: none;
 font-weight: bold;
 }
 
-.dashboard-main {
+.dashboard-main .admin-panel {
 padding: 2em;
+display: grid;
+grid-template-columns: auto;
+align-items: center;
 }
 
-.admin-panel {
-display: grid;
-grid-template-rows: repeat(auto-fit, minmax(280px, 1fr));
-gap: 2em;
-margin-top: 2em;
-}
 
 .admin-card {
+
 background-color: #ffffff;
 border-radius: 12px;
 padding: 1.5em;
