--- a/proyecto_reciclaje/reciclaje/templates/administrador/admin.html
+++ b/proyecto_reciclaje/reciclaje/templates/administrador/admin.html
@@ -10,23 +10,22 @@
 <body class="dashboard-body">
    <header class="dashboard-header">
     <h1>Bienvenido, Admin</h1>
-    <nav>
-      <a href="{% url 'admin_panel' %}">Inicio</a>
-      <a href="{% url 'admin_usuarios' %}">Ver Usuarios</a>
-      <a href="{% url 'admin_registros' %}">Ver Registros</a>
-      <a href="{% url 'admin_catalogo' %}">Ver Catálogos</a>
-      <a href="{% url 'admin_catalogo' %}">Ver Donaciones</a>
-      <a href="{% url 'admin_historial' %}">Historial de Acceso</a>
-      <select name="lista-bitacora-menu" id="lista-bitacora-menu" onchange="redirigirBitacora(this.value)">
-        <option value="#">Bitácoras ↓</option>
-        <option value="{% url 'bitacora_reciclaje' %}">Bitácora Reciclaje</option>
-        <option value="{% url 'bitacora_catalogo' %}">Bitácora de Catálogo</option>
-        <option value="{% url 'bitacora_canje' %}">Bitácora de Canje</option>
-      </select>
-       <a href="{% url 'dashboard' %}">Volver a Usuario</a>
-      <a href="{% url 'logout' %}">Cerrar Sesión</a>
-    </nav>
-  </header>
+      <nav>
+        <a href="{% url 'admin_panel' %}">Inicio</a>
+        <a href="{% url 'admin_usuarios' %}">Ver Usuarios</a>
+        <a href="{% url 'admin_registros' %}">Ver Registros</a>
+        <a href="{% url 'admin_catalogo' %}">Ver Catálogos</a>
+        <a href="{% url 'admin_donacion' %}">Ver Donaciones</a>
+        <a href="{% url 'admin_historial' %}">Historial de Acceso</a>
+        <select name="lista-bitacora-menu" id="lista-bitacora-menu" onchange="redirigirBitacora(this.value)">
+          <option value="#">Bitácoras ↓</option>
+          <option value="{% url 'bitacora_reciclaje' %}">Bitácora Reciclaje</option>
+          <option value="{% url 'bitacora_catalogo' %}">Bitácora de Catálogo</option>
+          <option value="{% url 'bitacora_canje' %}">Bitácora de Canje</option>
+        </select>
+        <a href="{% url 'logout' %}">Cerrar Sesión</a>
+      </nav>
+    </header>
 
   <main class="dashboard-main admin-panel">
     {% if messages %}
@@ -35,23 +34,23 @@
       {% endfor %}
     {% endif %}
     <div class="admin-card">
-      <section class="admin-card">
+      <section class="admin-card-gif">
         <h2>Usuarios</h2>
         <a href="{% url 'admin_usuarios' %}" class="admin-btn">Gestionar</a>
       </section>
-      <section class="admin-card">
+      <section class="admin-card-gif">
         <h2>Registros</h2>
         <a href="{% url 'admin_registros' %}" class="admin-btn">Ver</a>
       </section>
-      <section class="admin-card">
+      <section class="admin-card-gif">
         <h2>Catálogo</h2>
         <a href="{% url 'admin_catalogo' %}" class="admin-btn">Ver</a>
       </section>
-      <section class="admin-card">
+      <section class="admin-card-gif">
         <h2>Historial</h2>
         <a href="{% url 'admin_historial' %}" class="admin-btn">Ver</a>
       </section>
-      <section class="admin-card">
+      <section class="admin-card-gif">
         <h2>Bitácora</h2>
         <select name="lista-bitacora" id="lista-bitacora" onchange="redirigirBitacora(this.value)">
           <option value="">Seleccionar</option>
