--- a/proyecto_reciclaje/reciclaje/templates/administrador/bitacora_canje.html
+++ b/proyecto_reciclaje/reciclaje/templates/administrador/bitacora_canje.html
@@ -15,7 +15,7 @@
       <a href="{% url 'admin_usuarios' %}">Ver Usuarios</a>
       <a href="{% url 'admin_registros' %}">Ver Registros</a>
       <a href="{% url 'admin_catalogo' %}">Ver Catálogos</a>
-      <a href="{% url 'admin_catalogo' %}">Ver Donaciones</a>
+      <a href="{% url 'admin_donacion' %}">Ver Donaciones</a>
       <a href="{% url 'admin_historial' %}">Historial de Acceso</a>
       <select name="lista-bitacora-menu" id="lista-bitacora-menu" onchange="redirigirBitacora(this.value)">
         <option value="#">Bitácoras ↓</option>
@@ -23,7 +23,6 @@
         <option value="{% url 'bitacora_catalogo' %}">Bitácora de Catálogo</option>
         <option value="{% url 'bitacora_canje' %}">Bitácora de Canje</option>
       </select>
-       <a href="{% url 'dashboard' %}">Volver a Usuario</a>
       <a href="{% url 'logout' %}">Cerrar Sesión</a>
     </nav>
   </header>
