--- a/proyecto_reciclaje/reciclaje/templates/usuario_regular/login.html
+++ b/proyecto_reciclaje/reciclaje/templates/usuario_regular/login.html
@@ -17,17 +17,19 @@
     {% endif %}
     <form method="post" action="{% url 'login' %}">
       {% csrf_token %}
-      <div class="form-group">
-        <label for="email">Correo:</label>
-        <input type="email" id="email" name="email" required placeholder="Ingresa tu correo" />
-      </div>
-      <div class="form-group">
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required placeholder="Ingresa tu contraseña" />
-      </div>
+      {{ form.non_field_errors }}
+      {% for field in form %}
+        <div class="form-group">
+          {{ field.label_tag }}
+          {{ field }}
+          {% for error in field.errors %}
+            <span class="error">{{ error }}</span>
+          {% endfor %}
+        </div>
+      {% endfor %}
       <button type="submit" class="submit-btn">Iniciar Sesión</button>
       <div class="register-link">
-        <a href="{% url 'registro_usuario' %}">¿No tienes cuenta? Regístrate</a>
+        <p>¿No tienes cuenta?</p><a href="{% url 'registro_usuario' %}"> Regístrate</a>
       </div>
     </form>
   </div>
